--- a/templates/resources/service.yml
+++ b/templates/resources/service.yml
@@ -2,17 +2,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ${CI_PROJECT_PATH_SLUG}
-  namespace: ${NAMESPACE}
-  labels:
-    app: ${CI_PROJECT_PATH_SLUG}
-    tier: web
+  name: <%= data['service-name'] %>
+  namespace: <%= data['global-namespace'] %>
+  labels:<% if(data['global-app-name']) { %>
+    app: <%= data['global-app-name'] -%><% } %><% if(data['global-app-tier']) { %>
+    tier: <%= data['global-app-tier'] -%><% } %>
 spec:
   selector:
-    name: ${CI_PROJECT_PATH_SLUG}
-    app: ${CI_PROJECT_PATH_SLUG}
-    tier: web
-  ports:
-    - name: http
-      port: 80
-      targetPort: http
+    name: <%= data['service-selector'] %><% if(data['global-app-name']) { %>
+    app: <%= data['global-app-name'] -%><% } %><% if(data['global-app-tier']) { %>
+    tier: <%= data['global-app-tier'] -%><% } %><% if(data['service-ports'].length > 0) { %>
+  ports:<% for(const map of data['service-ports']) { %>
+    - name: <%= map.name %>
+      port: <%= map.port %>
+      targetPort: <%= map.name %><% } %><% } %>
