--- a/templates/resources/deployment.yml
+++ b/templates/resources/deployment.yml
@@ -4,9 +4,9 @@ kind: Deployment
 metadata:
   name: <%= data['deployment-name'] %>
   namespace: <%= data['global-namespace'] %>
-  labels:<% if(data['global-app-name']) { %>
+  labels:<% if(data['global-app-name']) { %><% if(data['global-app-name'] || data['global-app-tier']) { %>
     app: <%= data['global-app-name'] -%><% } %><% if(data['global-app-tier']) { %>
-    tier: <%= data['global-app-tier'] -%><% } %>
+    tier: <%= data['global-app-tier'] -%><% } %><% } %>
 spec:
   replicas: 1
   revisionHistoryLimit: 1
