--- a/templates/resources/persistent-volume-claim.yml
+++ b/templates/resources/persistent-volume-claim.yml
@@ -3,10 +3,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: <%= data['pvc-name'] %>
-  namespace: <%= data['global-namespace'] %>
+  namespace: <%= data['global-namespace'] %><% if(data['global-app-name'] || data['global-app-tier']) { %>
   labels:<% if(data['global-app-name']) { %>
     app: <%= data['global-app-name'] -%><% } %><% if(data['global-app-tier']) { %>
-    tier: <%= data['global-app-tier'] -%><% } %>
+    tier: <%= data['global-app-tier'] -%><% } %><% } %>
 spec:
   accessModes:<% for(const mode of data['pvc-access-modes']) { %>
     - "<%= mode %>"<% } %>
