--- a/templates/resources/deployment.yml
+++ b/templates/resources/deployment.yml
@@ -3,8 +3,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: <%= data['deployment-name'] %>
-  namespace: <%= data['global-namespace'] %>
-  labels:<% if(data['global-app-name']) { %><% if(data['global-app-name'] || data['global-app-tier']) { %>
+  namespace: <%= data['global-namespace'] %><% if(data['global-app-name'] || data['global-app-tier']) { %>
+  labels:<% if(data['global-app-name']) { %>
     app: <%= data['global-app-name'] -%><% } %><% if(data['global-app-tier']) { %>
     tier: <%= data['global-app-tier'] -%><% } %><% } %>
 spec:
