--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-k8s",
+  "name": "@smartive/generator-k8s",
   "version": "0.0.0-development",
   "description": "Yeoman generator for kubernetes resources",
   "main": "generators/app/index.js",
